--- a/BrewConfig.ini
+++ b/BrewConfig.ini
@@ -1,7 +1,10 @@
 [DIRECTORIES]
-workingdir = S:\Adam Rees
+workingdir = /home/adam/
 
 [DIMENSIONS]
 diameter = 0.075
 depth = 0.085
+
+[VOLUMES]
+milkvolume = 10
 
